--- a/sonichq/images/display.cgi%3fdirectory%3dscreenshots/tailsmusicmaker%26title%3dTails And The Music Maker/index.html
+++ b/sonichq/images/display.cgi%3fdirectory%3dscreenshots/tailsmusicmaker%26title%3dTails And The Music Maker/index.html
@@ -14,7 +14,7 @@ A{text-decoration:none} -->
 <body text="#000000" bgcolor="white" alink="#0000FF" link=#0000FF vlink=#0000FF background="/sonichq/images/backgrounds/EspioGrayBG.gif" bgproperties="fixed">
 
 <span class=pathlinks><table class=glow>
-<a href=/>Sonic HQ</a> | <a href=/sonichq/images>Download Gallery</a> | Tails And The Music Maker
+<a href=/sonichq/>Sonic HQ</a> | <a href=/sonichq/images>Download Gallery</a> | Tails And The Music Maker
 </table></span>
 
 <center><p><table width=70%><tr align=center><td>
