--- a/sonicstadium/topcities/fangames.html
+++ b/sonicstadium/topcities/fangames.html
@@ -5,9 +5,10 @@ function WinOpen(src)
 	OpenWin.focus()
 }
 <!--
-	window.open('https://web.archive.org/20011101000000/http://216.179.151.72/stuff_tc/popupbanner.html','6B8B4567','toolbar=no,location=no,directories=no,status=no,menubar=no,scrollbars=no,resizable=no,width=500,height=400');
+	window.open('https://web.archive.org/20011107000000/http://64.152.192.118/stuff_tc/popupbanner.html','6B8B4567','toolbar=no,location=no,directories=no,status=no,menubar=no,scrollbars=no,resizable=no,width=500,height=400');
 // -->
-</SCRIPT><HTML>
+</SCRIPT>
+<HTML>
  <HEAD>
   <!-- $MVD$:app("MicroVision WebExpress","770") -->
   <!-- $MVD$:template("","0","0") -->
@@ -21,24 +22,27 @@ function WinOpen(src)
 <STYLE>
  
                                       <!--
-                                      A:link {color: black ; text-decoration: none;
+                                      A:link {color: #0080FF ; text-decoration: none;
                                       }
-                                      A:visited {color: black; text-decoration: none}
+                                      A:visited {color: #0080FF; text-decoration: none}
                                       <!--A:hover   {text-decoration: none; color:
-                                      black}--><!--A:hover   {text-decoration: underline;
-                                      color: black}
+                                      #0080FF}--><!--A:hover   {text-decoration: underline;
+                                      color: blue}
 input {  font-family: Verdana; font-size: 8pt; color: black; text-decoration: none; background-color: white}
 -->
 </STYLE>
  </HEAD>
- <BODY background="b.gif" bgproperties="fixed" TEXT="BLACK" LINK="BLACK" VLINK="BLACK" ALINK="BLACK" LEFTMARGIN="0" TOPMARGIN="0" BOTTOMMARGIN="0">
+ <BODY background="bg.gif" bgproperties="fixed" TEXT="white" LINK="blue" VLINK="blue" ALINK="blue" LEFTMARGIN="0" TOPMARGIN="0" BOTTOMMARGIN="0">
+<CENTER>
+  <DIV>
 
-        
-       <div align=center><!-- $MVD$:picsz("577","126") --><a href="main.html"><IMG SRC="titlelogo3.gif" alt="Click HERE to go back to the main page" align=center BORDER="0"></a></div></TD>
+<div align=center><!-- $MVD$:picsz("577","126") --><a href="main.html"><IMG SRC="titlelogo3.gif" alt="Click HERE to go back to the main page" align=center BORDER="0"></a>
+
+    </TABLE>
        <table border=0 width="783" align=center><tr><td width=85%><div align=left>       
-<font size=2 color=black><b><a href="frame.html"><font color=blue>MENU</a></font> >> Sonic Fan Club >> <font color=green>The most exciting Fan Fair on the 'net!<br>
-&nbsp;&nbsp;&nbsp;&nbsp;<font color=black><b>>><a href="fanprev.html"><font color=orange><b>Fan Game Previews</a></font> - <a href="faninfo.html"><font color=orange><b>Fan Game Information</a></font> - <a href="fandownload.html"><font color=orange><b>Fan Game Downloads</a></font> - <a href="fancheat.html"><font color=orange><b>Fan Game Tips</a></font><br>
-&nbsp;&nbsp;&nbsp;&nbsp;<font color=black><b>>><a href="sonfan.html"><font color=blue><b>Info Page</a></font> - <a href="sonfanews.html"><font color=blue>SFCNews</a></font> - <a href="fangames.html"><font color=blue>Fan Games Club</a></font> - <a href="fanart.html"><font color=blue>Fan Art Club</a></font> - <a href="fanfic.html"><font color=blue>Fan Fic Club</a></font> - <a href="fanvmu.html"><font color=blue>VMU Club</a></font> - <a href="fanhoax.html"><font color=blue>Hoaxers Club</a></font> - <a href="fanreview.html"><font color=blue>Sonic Shout</a></font><td width=15% VALIGN=TOP><div align=right><font size=2 color=black><b><a href="javascript:history.go(-1)
+<font size=2><b><a href="frame.html">MENU</a> >> Sonic Fan Club >> <font color=#00B700>The most exciting Fan Fair on the 'net!<br>
+&nbsp;&nbsp;&nbsp;&nbsp;<b>>><a href="fanprev.html"><font color=orange><b>Fan Game Previews</a></font> - <a href="faninfo.html"><font color=orange><b>Fan Game Information</a></font> - <a href="fandownload.html"><font color=orange><b>Fan Game Downloads</a></font> - <a href="fancheat.html"><font color=orange><b>Fan Game Tips</a></font><br>
+&nbsp;&nbsp;&nbsp;&nbsp;<b>>><a href="sonfan.html"><b>Info Page</a> - <a href="sonfanews.html">SFCNews</a> - <a href="fangames.html">Fan Games Club</a> - <a href="fanart.html">Fan Art Club</a> - <a href="fanfic.html">Fan Fic Club</a> - <a href="fanhoax.html">Hoaxers Club</a> - <a href="fanreview.html">Sonic Shout</a><td width=15% VALIGN=TOP><div align=right><font size=2 color=black><b><a href="javascript:history.go(-1)
 "><font color=blue>Go Back a Page</a></font></table>
      </TR>
     </TABLE>
@@ -48,7 +52,7 @@ input {  font-family: Verdana; font-size: 8pt; color: black; text-decoration: no
       <TD HEIGHT="600" WIDTH="580" VALIGN=TOP CELLPADDING="5" CELLSPACING="2">
        <CENTER>
         <P ALIGN=CENTER>
-         <FONT FACE="arial"><FONT SIZE="2"><FONT COLOR="LIGHTGREY">
+         <FONT FACE="arial"><FONT SIZE="2">
 
 
 <div align=center>
@@ -60,39 +64,38 @@ input {  font-family: Verdana; font-size: 8pt; color: black; text-decoration: no
 
 
 
-<div align=center><B><font color=black>The Sonic Fan Game Club is the best place to send your Fan Games, Demos, and release info on upcoming Fan adventures! All demos, full games and reviews of the fan games will appear here, whereas release info will be put in SFCNews. Be sure to send any info relating to new games to the Sonic Fan Club News section.<p>
+<div align=center><B>The Sonic Fan Game Club is the best place to send your Fan Games, Demos, and release info on upcoming Fan adventures! All demos, full games and reviews of the fan games will appear here, whereas release info will be put in SFCNews. Be sure to send any info relating to new games to the Sonic Fan Club News section.<p>
 You can download and see information and a review of everyone's fan games in here. These people are very talented indeed, and if you want to join them, then send info, a game or demo and Dreadknux will be sure to let the world know.<br>
-If the developers of these Fan Games decide to release the cheats available for their games, they can direct them to Dreadknux, and he will place them in the Fan Game Tips Section of this Zone. If you would like to review any of the fan games that you have played, please direct them to the <a href="fanreview.html"><font color=blue>Sonic Shout!</a></font>.<p>
+If the developers of these Fan Games decide to release the cheats available for their games, they can direct them to Dreadknux, and he will place them in the Fan Game Tips Section of this Zone. If you would like to review any of the fan games that you have played, please direct them to the <a href="fanreview.html">Sonic Shout!</a>.<p>
 
-<table border=1 bgcolor=white width=100%><tr><td><div align=center>
-<font size=4 color=green><b>News</font></b></table><p>
-New game that just got released on Sonic's Birthday, Sonic Wars, by Diablo, the same guy working on the impressive Sonic S-V 2, also previewed, if you missed it. Sonic Wars has been reviewed, find it in the Fan Game Information Page, alongside Sonanoid. For the love of god, send your fan games stuff in!<p>
+<p><hr width=90%>
+<font size=4 color=#00B700><b>News</font><br>
+
+<font size=2>Well, the new SAGE is open, but it doesn't seem to want to gain anyone entry. Seeings as Blaze has handed over control of the new SAGE, I'll forgive them for closing it pretty early, if that is the case of why it's not working. Well, if the closing was just a technical hitch (it must have, no-one closes SAGE THAT early!) expect a big report by moi! ^_^<p>
 
 <p><table border=0 align=center width=85%><tr><td>
 
 <tr><td><img src="Update/sonfanpic.gif" align=right alt="Sonic Fan Club - The place you'll want to be!"><TD>
 <h4><font color=#ffc000><u>"Where do you wanna go today?"</u></font></h4><B>
-<font size=3><a href="fanprev.html"><font color=green>Fan Game Previews</a></font><br>
-<font size=2 color=black>Immediate release info will appear in SFCNews. But any more titbits of certain upcoming Fan Game info will be collected here. Special Events such as SAGE will show here too.<br>
-<font size=3><a href="faninfo.html"><font color=green>Fan Game Information</a></font><br>
-<font size=2 color=black>Much like the Good old Back Catalogue, all the Fan Games are reviewed here. Take a look before you download.<br>
-<font size=3><a href="fandownload.html"><font color=green>Fan Game Downloads</a></font><br>
-<font size=2 color=black>You can Download any Fan Game you like by going straight here. Alternatively, you can download the games at any time by looking through the Fan Game Info.<br>
-<font size=3><a href="fancheat.html"><font color=green>Fan Game Tips</a></font><br>
-<font size=2 color=black>Any Tips released by developers of Fan Games reviewed in this Zone will appear here. Send your Fan Game cheats in!
+<font size=3><a href="fanprev.html"><font color=#00B700>Fan Game Previews</a></font><br>
+<font size=2>Immediate release info will appear in SFCNews. But any more titbits of certain upcoming Fan Game info will be collected here. Special Events such as SAGE will show here too.<br>
+<font size=3><a href="faninfo.html"><font color=#00B700>Fan Game Information</a></font><br>
+<font size=2>Much like the Good old Back Catalogue, all the Fan Games are reviewed here. Take a look before you download.<br>
+<font size=3><a href="fandownload.html"><font color=#00B700>Fan Game Downloads</a></font><br>
+<font size=2>You can Download any Fan Game you like by going straight here. Alternatively, you can download the games at any time by looking through the Fan Game Info.<br>
+<font size=3><a href="fancheat.html"><font color=#00B700>Fan Game Tips</a></font><br>
+<font size=2>Any Tips released by developers of Fan Games reviewed in this Zone will appear here. Send your Fan Game cheats in!
 </table>
 
 
 
 
 <h4><font color=#ffc000><u>*Send in your Fan Games to Dreadknux!*<br>
-<a href=mailto:dreadknux@knuckles.co.uk><font color=blue>dreadknux@knuckles.co.uk</a></font><br>
+<a href=mailto:dreadknux@knuckles.co.uk>dreadknux@knuckles.co.uk</a><br>
 </u></font></h4><B>
 
 
 <p>
-<div align=center><img src="Update/stadiumbottom.gif"><br>
-<img src="Update/dreadknuxnet.gif"><p>
-
+<div align=center><a href="main.html"><img src="Update/stadiumbottom.gif" border=0></a><p>
 </BODY>
 </HTML>
