--- a/sonichq/features/index.html
+++ b/sonichq/features/index.html
@@ -1,8 +1,9 @@
 <!doctype html public "-//w3c//dtd html 4.0 transitional//en">
 <html>
 <head>
-   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-   <title>Sonic HQ Features</title>
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<title>Sonic HQ Features</title>
+<LINK REL="SHORTCUT ICON" HREF="favicon.ico">
 <style type="text/css">
 <!-- a:hover {text-decoration: underline}
 A{text-decoration:none} -->
@@ -23,12 +24,12 @@ document.write('<link rel=stylesheet href=/sonichq/css/' + theme + '.css type="t
 <br>
 
 <center>
-<IFRAME SRC="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?DC=ztnet-ron-top&TARGET=_blank" HEIGHT="60" WIDTH="468" SCROLLING="NO"
+<IFRAME SRC="https://web.archive.org/20011107000000/http://ads1.ad-flow.com/?DC=ztnet-ron-top&TARGET=_blank" HEIGHT="60" WIDTH="468" SCROLLING="NO"
 MARGINWIDTH="0" MARGINHEIGHT="0" FRAMEBORDER="0" VSPACE="0" HSPACE="0">
-<SCRIPT LANGUAGE="JavaScript" SRC="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?DC=ztnet-ron-top&JS=Y&TARGET=_blank">
+<SCRIPT LANGUAGE="JavaScript" SRC="https://web.archive.org/20011107000000/http://ads1.ad-flow.com/?DC=ztnet-ron-top&JS=Y&TARGET=_blank">
 </SCRIPT>
 <NOSCRIPT>
-<A HREF="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?SHT=ztnet-ron-top" TARGET="_blank" HEIGHT="60" WIDTH="468"><IMG SRC="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?SIT=ztnet-ron-top&SC=Y"></A>
+<A HREF="https://web.archive.org/20011107000000/http://ads1.ad-flow.com/?SHT=ztnet-ron-top" TARGET="_blank"><IMG SRC="https://web.archive.org/20011107000000/http://ads1.ad-flow.com/?SIT=ztnet-ron-top&SC=Y" height="60" width="468"></A>
 </NOSCRIPT>
 </IFRAME>
 </center>
@@ -48,7 +49,7 @@ MARGINWIDTH="0" MARGINHEIGHT="0" FRAMEBORDER="0" VSPACE="0" HSPACE="0">
 document.write(titlepic)
 //-->
 </script>
-<img src=0gif align=right></td>
+<img src=topbar-title.gif align=right></td>
 
 <td width=19><img src=/sonichq/topright.gif width=19></td></tr>
 </table>
@@ -63,7 +64,7 @@ document.write(titlepic)
 <table BORDER=0 CELLSPACING=0 CELLPADDING=0 WIDTH=100% class=maintable><tr>
 
 <td VALIGN=TOP WIDTH="70%" bgcolor=ffffff class=itemtable>
-<font face=Arial size=-1 color=black>
+<font face=Arial size=2 class=itemtable>
 
 <!sections>
 <div class=titlebar><table class=glow>
@@ -71,25 +72,25 @@ document.write(titlepic)
 </table></div>
 
 <div class=itemtext>
-Sign up for a free chaotix.zzn.com or knothole.zzn.com address!  Operated by <a href=https://web.archive.org/20011101000000/http://www.zzn.com target="_blank"><b>ZZN.com</b></a>.<p>
+Sign up for a free chaotix.zzn.com or knothole.zzn.com address!  Operated by <a href=https://web.archive.org/20011107000000/http://www.zzn.com target="_blank"><b>ZZN.com</b></a>.<p>
 </div><div class=titlebar><table class=glow>
 <a href="../main/nostalgia">The Time Capsule</a> - updated 5-15-01
 </table></div>
 
 <div class=itemtext>
-The history of Sonic HQ.  Operated by <b>Vec</b>.<p>
+The history of Sonic HQ.<p>
 </div><div class=titlebar><table class=glow>
-<a href="../main/staff.htm">Sonic HQ Staff & Contact List</a> - updated 7-23-01
+<a href="../main/staff.php">Sonic HQ Staff & Contact List</a> - updated 11-3-01
 </table></div>
 
 <div class=itemtext>
-The Staff members and contributors of Sonic HQ.  Operated by <b>WB</b>.<p>
+The Staff members and contributors of Sonic HQ.<p>
 </div><div class=titlebar><table class=glow>
-<a href="../main/awards.htm">Awards</a> - updated 12-14-00
+<a href="../main/awards.htm">Awards</a> - updated 9-29-01
 </table></div>
 
 <div class=itemtext>
-Awards that Sonic HQ has received from other sites.  Operated by <b>WB and Vec</b>.<p>
+Awards that Sonic HQ has received from other sites.<p>
 </div><div class=titlebar><table class=glow>
 <a href="history.php3">Sonic Internet History</a> - updated 7-16-00
 </table></div>
@@ -110,13 +111,7 @@ document.write('<center>MIDI: ' + caption + '<br><a href="#" onClick="MidiPlayer
 //-->
 </script>
 
-<center><u>Site Features</u></center>
-<p>Information about Sonic HQ can be found here.
-
-<center>
-<p><a href=https://web.archive.org/20011101000000/http://pub12.ezboard.com/fsonichqcommunityfrm22.showAddTopicScreenFromWeb border=0><IMG SRC=sign.jpg border=0 alt="Sign Guestbook"></a><br>
-<a href=https://web.archive.org/20011101000000/http://pub12.ezboard.com/fsonichqcommunityfrm22 border=0><IMG SRC=view.jpg border=0 alt="View Guestbook"></a><br>
-</center>
+<center><u>Site Features</u></center> <p>Information about Sonic HQ can be found here.  <center> <p><a href=https://web.archive.org/20011107000000/http://pub12.ezboard.com/fsonichqcommunityfrm22.showAddTopicScreenFromWeb border=0><IMG SRC=sign.jpg border=0 alt="Sign Guestbook"></a><br> <a href=https://web.archive.org/20011107000000/http://pub12.ezboard.com/fsonichqcommunityfrm22 border=0><IMG SRC=view.jpg border=0 alt="View Guestbook"></a><br> </center>
 </font></td></tr>
 </table>
 <!end main table middle>
