--- a/sonicstadium/topcities/fanreview.html
+++ b/sonicstadium/topcities/fanreview.html
@@ -1,13 +1,4 @@
-<script language='Javascript'>
-function WinOpen(src)
-{
-	OpenWin = window.open(src, '12B29DDC')
-	OpenWin.focus()
-}
-<!--
-	window.open('https://web.archive.org/20011101000000/http://216.179.151.72/stuff_tc/popupbanner.html','12B29DDC','toolbar=no,location=no,directories=no,status=no,menubar=no,scrollbars=no,resizable=no,width=500,height=400');
-// -->
-</SCRIPT><HTML>
+<HTML>
  <HEAD>
   <!-- $MVD$:app("MicroVision WebExpress","770") -->
   <!-- $MVD$:template("","0","0") -->
