--- a/sonicstadium/topcities/linkto.html
+++ b/sonicstadium/topcities/linkto.html
@@ -1,13 +1,14 @@
 <script language='Javascript'>
 function WinOpen(src)
 {
-	OpenWin = window.open(src, '28AC373F')
+	OpenWin = window.open(src, '12B29DDC')
 	OpenWin.focus()
 }
 <!--
-	window.open('https://web.archive.org/20011101000000/http://216.179.151.72/stuff_tc/popupbanner.html','28AC373F','toolbar=no,location=no,directories=no,status=no,menubar=no,scrollbars=no,resizable=no,width=500,height=400');
+	window.open('https://web.archive.org/20011107000000/http://64.152.192.118/stuff_tc/popupbanner.html','12B29DDC','toolbar=no,location=no,directories=no,status=no,menubar=no,scrollbars=no,resizable=no,width=500,height=400');
 // -->
-</SCRIPT><HTML>
+</SCRIPT>
+<HTML>
  <HEAD>
   <!-- $MVD$:app("MicroVision WebExpress","770") -->
   <!-- $MVD$:template("","0","0") -->
@@ -64,11 +65,11 @@ Looky down there. See them? You can use these banners to link to the Dreadknuxst
 <table border=0>
 <tr><td><font color=black size=1>The following created by Dreadknux.<tr><td>
 <div align=center><img src="Update/stadiumbanner1.gif"><br>
-<font size=2 font color=black><b>< a href="https://web.archive.org/20011101000000/http://www.sonic-stadium.com" target=_blank ><br>< img src="/sonicstadium/angelfire/Update/stadiumbanner1.gif" > < /a > <tr><td>
+<font size=2 font color=black><b>< a href="https://web.archive.org/20011107000000/http://www.sonic-stadium.com" target=_blank ><br>< img src="/sonicstadium/angelfire/Update/stadiumbanner1.gif" > < /a > <tr><td>
 <div align=center><img src="Update/stadiumbanner2.gif"><br>
-<font size=2 font color=black><b>< a href="https://web.archive.org/20011101000000/http://www.sonic-stadium.com" target=_blank ><br>< img src="/sonicstadium/angelfire/Update/stadiumbanner2.gif" > < /a > <tr><td>
+<font size=2 font color=black><b>< a href="https://web.archive.org/20011107000000/http://www.sonic-stadium.com" target=_blank ><br>< img src="/sonicstadium/angelfire/Update/stadiumbanner2.gif" > < /a > <tr><td>
 <div align=center><img src="Update/stadiumbanner3.gif"><br>
-<font size=2 font color=black><b>< a href="https://web.archive.org/20011101000000/http://www.sonic-stadium.com" target=_blank ><br>< img src="/sonicstadium/angelfire/Update/stadiumbanner3.gif" > < /a > <tr height=100>
+<font size=2 font color=black><b>< a href="https://web.archive.org/20011107000000/http://www.sonic-stadium.com" target=_blank ><br>< img src="/sonicstadium/angelfire/Update/stadiumbanner3.gif" > < /a > <tr height=100>
 <td><div align=center><img src="Update/sfcbanner.gif"><br>
 <font size=2 font color=black><b>< a href="/sonicstadium/angelfire/sonfan.html" target=_blank ><br>< img src="/sonicstadium/angelfire/Update/sfcbanner.gif" > < /a >
 </table>
