More translation work done!

--- a/japan/advance/chara.html
+++ b/japan/advance/chara.html
@@ -32,9 +32,9 @@ body{
               <td bgcolor="#0033FF"><img src="image/chara_sonic_l.gif" width="150" height="150" align="left"><font size="2"><font color="#FFFFFF"><br>
                 <b><font size="3" color="#FFFF00">Sonic the Hedgehog</font></b><br>
                 <br>
-                The world's fastest, supersonic hedgehog.<br>
+                The world's fastest supersonic hedgehog.<br>
                 <br>
-                He loves to live a free and easy life, and has a bit of a temper. But in truth, he has a kind heart and will not leave anyone in need alone. The game's controls are well-balanced, and I recommend it for beginning and advanced players alike.</font></font> 
+                He loves to live a free and easy life, and has a bit of an attitude. He has a kind heart and won't leave anyone in need alone. His controls are well-balanced, and we recommend it for beginners and pros alike.</font></font> 
               </td>
             </tr>
             <tr> 
@@ -42,23 +42,23 @@ body{
                 <br>
                 Sonic's sidekick, a little fox.<br>
                 <br>
-                He has a gentle personality and is a big fan of mechanics. Tails' greatest feature is his ability to fly by spinning his two tails, which is also the origin of his nickname. By flying through the air, you can easily explore the zones. Tails is sure to be able to find the "Special Spring" in even the most obscure of places.</font></td>
+                He has a gentle personality and is a big fan of mechanics. Tails' greatest trait is his ability to fly by spinning his two tails, which is also the origin of his nickname. By flying through the air, you can easily explore the zones. Tails is sure to be able to find the Special Spring in even the most obscure of places.</font></td>
             </tr>
             <tr> 
               <td bgcolor="#0033FF"><img src="image/chara_knuckles_l.gif" width="151" height="150" align="left"><font size="2" color="#FFFFFF"><b><font size="3" color="#FFFF00"><br>
                 Knuckles the Echidna</font></b><br>
                 <br>
-                Sonic's best friend and rival, the echidna.<br>
+                Sonic's best friend and rival, an echidna.<br>
                 <br>
-                He is a powerful echidna that can shatter rocks with a single blow. He has a single-minded and serious personality. One of Knuckles' special features is that he can glide and climb walls. Thanks to these abilities, he has a wider range of movement than Sonic. This makes him a good character for exploring maps.</font></td>
+                He's a powerful echidna that can shatter boulders with a single blow. He has a single-minded and serious personality. Knuckles' greatest abilities is that he can glide and climb walls. Thanks to these abilities, he has a wider range of movement than Sonic. This makes him a good character for exploring maps.</font></td>
             </tr>
             <tr> 
               <td bgcolor="#0033FF"><img src="image/chara_amy_l.gif" width="149" height="150" align="right"><b><font size="3" color="#FFFF00"><br>
                 Amy Rose</font></b><br>
                 <br>
-                <font size="2" color="#FFFFFF">The self-proclaimed "girlfriend of Sonic" who is always full of energy.<br>
+                <font size="2" color="#FFFFFF">Sonic's self-proclaimed girlfriend, who's always full of energy.<br>
                 <br>
-                With her beloved Piko Piko Hammer as her weapon, she helps Sonic. Unlike the other characters, Amy cannot perform the common actions of Spin Dashing and Spin moves, which can be a little difficult to handle if you're used to them. Among the four characters, Amy is the one for advanced players.</font></td>
+                With her beloved Piko Piko Hammer as her weapon, she helps Sonic. Unlike the other characters, Amy cannot spin, which can be a little challenging if you've played with the other characters. Among the four characters, Amy is the one for pro players.</font></td>
             </tr>
           </table>
         </div>
@@ -82,10 +82,10 @@ body{
             <tr> 
               <td><img src="image/chara_eggman_l.gif" width="170" height="150" align="left"><b><font size="3" color="#FFFF00">Dr. Eggman</font></b><br>
                 <br>
-                <font size="2" color="#FFFFFF">A mad genius who sees Sonic as his rival.<br>
+                <font size="2" color="#FFFFFF">A scientific genius who sees Sonic as his rival.<br>
                 <br>
-                He has attempted many evil schemes, but each time he has been thwarted by Sonic. This time, his goal is to build an empire of his own. 
-                In order to do so, he has turned innocent animals into mechanical ones using his scientific skills. He is not very good at physical combat, so he rides mechanical creations of his own to fight.</font></td>
+                He's attempted many evil schemes, most of which thwarted by Sonic. This time, his goal is to build an empire of his own. 
+                In order to do so, he has turned innocent animals into diabolical badniks using his scientific skills. He's not very good at physical combat, so he rides on his own machines.</font></td>
             </tr>
           </table>
         </div>
@@ -97,7 +97,7 @@ body{
   </table>
   <br>
   <b><font color="#00FF00"><font size="2"><img src="image/d1.gif" height="15"> 
-  <a href="index.html" target="_top"><font color="#FF0000">&lt;&lt; To "Sonic Advance" Top Page 
+  <a href="index.html" target="_top"><font color="#FF0000">&lt;&lt; To Sonic Advance Home Page 
   &gt;&gt;</font></a></font></font></b> <img src="image/d2.gif"> <br>
   <br>
   <hr width="530" size="2">
